Sat Jan 22 04:09:22 2011  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych/nodes/node.rb: Make Psych::Nodes::Node
	  enumerable.

	* ext/psych/lib/psych/visitors/depth_first.rb: Add a depth-first
	  visitor to enumerate over a YAML AST in a depth-first fashion

	* test/psych/nodes/test_enumerable.rb: test for enumerating nodes

	* test/psych/visitors/test_depth_first.rb: test for depth-first
	  visitor

Sat Jan 22 00:53:42 2011  Tanaka Akira  <akr@fsij.org>

	* vm_core.h: parenthesize macro arguments.

Fri Jan 21 18:15:09 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in: should not use -Werror=* flags while conftests.

Fri Jan 21 09:17:00 2011  Luis Lavena  <luislavena@gmail.com>

	* configure.in: Fix incorrectly detected x86_64-w64-mingw32 due
	  canonalization of target_os. Bug #3889 [ruby-core:32634]

Thu Jan 20 23:44:00 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* configure.in: Fix rb_cv_va_args_macro was broken. We are using
	  -Werror=implicit-function-declaration compile option. therefore
	  we need a function declaration explicitly.

Thu Jan 20 23:58:02 2011  Tanaka Akira  <akr@fsij.org>

	* node.h: parenthesize macro arguments.

Thu Jan 20 23:25:28 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* configure.in: Add '#include <stdlib.h>' to
	  rb_cv_localtime_overflow test too. It's reported by Tomoyuki
	  Chikanaga. Thanks.

Thu Jan 20 16:11:00 2011  Kenta Murata <mrkn@mrkn.jp>

	* README.EXT, README.EXT.ja: You shouldn't choose ``conftest.c'' as a
	  name of a source file.

Thu Jan 20 12:15:44 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* configure.in: Add stdlib.h inclusion into rb_cv_negative_time_t
	  test because it's required for exit(3). The patch is
	  created by Tomoyuki Chikanaga. [Bug #4287] [ruby-dev:43060]

Thu Jan 20 11:39:41 2011  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/webrick/utils.rb (TestWEBrick::RubyBin): test CGI does not need